# QtDemo

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.ui  QtDemo.pro
